changed form directions

--- a/basic-form/form-exercise1(one).html
+++ b/basic-form/form-exercise1(one).html
@@ -25,7 +25,7 @@
 
 
  <h1>Proposal Form</h1>
- <h2>Please fill in required fields</h2>
+ <h2>Please fill in required fields marked with *</h2>
  <fieldset>
  <legend>Speaker Info</legend>
  <ul>
